# dinvk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/dinvoke/: main.rs
examples/get_module_and_function/: main.rs
examples/syscall/: main.rs
examples/tampered_syscall/: main.rs
src/: allocator.rs  breakpoint.rs  console.rs  env.rs  error.rs  functions.rs  hash.rs  helper.rs  lib.rs  macros.rs  module.rs  panic.rs  pe.rs  resolve.rs  types.rs  util.rs  winapis.rs
src/data/: constant.rs  mod.rs  structs.rs  types.rs
src/module/: mod.rs
src/sys/: asm.rs  mod.rs
src/syscall/: asm.rs  dll.rs  mod.rs
src/syscall/aarch64/: mod.rs
src/syscall/x86/: mod.rs
src/syscall/x86_64/: mod.rs
tests/src/: main.rs
