[package]
name = "dinvk"
version = "0.4.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["João Victor"]
description = "Dynamically invoke arbitrary code in Rust (Dinvoke)"
repository = "https://github.com/joaoviictorti/dinvk"
homepage = "https://github.com/joaoviictorti/dinvk"
documentation = "https://docs.rs/dinvk/latest"
keywords = ["hacking", "dinvoke", "windows", "rust", "redteam"]
categories = ["os", "security", "no-std"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
doctest = false

[dependencies]
cfg-if = "1.0.0"
obfstr = "0.4.4"
spin = "0.10.0"
windows-targets = "0.53.4"
bitflags = { version = "2.8.0", default-features = false }

[features]
default = []
alloc = []
panic = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc"
]
